# serializer version: 1
# name: test_multiple_user_payloads_snapshot[user_1]
  dict({
    'metadata': dict({
      'format': 'json',
      'generated_by': 'super-alita',
    }),
    'user': dict({
      'created_at': '2024-01-01T00:00:00Z',
      'id': 1,
      'name': 'Alice',
      'preferences': dict({
        'notifications': True,
        'theme': 'dark',
      }),
    }),
    'version': 1,
  })
# ---
# name: test_multiple_user_payloads_snapshot[user_2]
  dict({
    'metadata': dict({
      'format': 'json',
      'generated_by': 'super-alita',
    }),
    'user': dict({
      'created_at': '2024-01-01T00:00:00Z',
      'id': 2,
      'name': 'Bob',
      'preferences': dict({
        'notifications': True,
        'theme': 'dark',
      }),
    }),
    'version': 1,
  })
# ---
# name: test_multiple_user_payloads_snapshot[user_3]
  dict({
    'metadata': dict({
      'format': 'json',
      'generated_by': 'super-alita',
    }),
    'user': dict({
      'created_at': '2024-01-01T00:00:00Z',
      'id': 3,
      'name': 'Charlie',
      'preferences': dict({
        'notifications': True,
        'theme': 'dark',
      }),
    }),
    'version': 1,
  })
# ---
# name: test_user_payload_snapshot
  dict({
    'metadata': dict({
      'format': 'json',
      'generated_by': 'super-alita',
    }),
    'user': dict({
      'created_at': '2024-01-01T00:00:00Z',
      'id': 1,
      'name': 'Alice',
      'preferences': dict({
        'notifications': True,
        'theme': 'dark',
      }),
    }),
    'version': 1,
  })
# ---
